parallel cursor recover gracefully from replica set and other errors SERVER-2481