client/dbclient.h
@@ -343,10 +343,12 @@ namespace mongo {
         virtual bool call( Message &toSend, Message &response, bool assertOk=true , string * actualServer = 0 ) = 0;
         virtual void say( Message &toSend ) = 0;
         virtual void sayPiggyBack( Message &toSend ) = 0;
-        virtual void checkResponse( const char* data, int nReturned ) {}
-
         /* used by QueryOption_Exhaust.  To use that your subclass must implement this. */
         virtual bool recv( Message& m ) { assert(false); return false; }
+        // In general, for lazy queries, we'll need to say, recv, then checkResponse
+        virtual void checkResponse( const char* data, int nReturned, bool* retry = NULL, string* targetHost = NULL ) {
+            if( retry ) *retry = false; if( targetHost ) *targetHost = "";
+        }
     };
 
     /**
@@ -791,15 +793,6 @@ namespace mongo {
 
         virtual bool callRead( Message& toSend , Message& response ) = 0;
         // virtual bool callWrite( Message& toSend , Message& response ) = 0; // TODO: add this if needed
-        virtual void say( Message& toSend  ) = 0;
-
-        /**
-         * this sends the request but does not wait for the response
-         * we return a DBClientBase in case this connection points to many servers
-         * so we can call recv() on the right socket
-         * @return the actual connection to call recv on
-         */
-        virtual DBClientBase* callLazy( Message& toSend );
         
         virtual ConnectionString::ConnectionType type() const = 0;
 
@@ -915,9 +908,10 @@ namespace mongo {
         virtual void killCursor( long long cursorID );
         virtual bool callRead( Message& toSend , Message& response ) { return call( toSend , response ); }
         virtual void say( Message &toSend );
+        virtual bool recv( Message& m );
+        virtual void checkResponse( const char *data, int nReturned, bool* retry = NULL, string* host = NULL );
         virtual bool call( Message &toSend, Message &response, bool assertOk = true , string * actualServer = 0 );
         virtual ConnectionString::ConnectionType type() const { return ConnectionString::MASTER; }
-        virtual void checkResponse( const char *data, int nReturned );
         void setSoTimeout(double to) { _so_timeout = to; }
 
         static int getNumConnections() {
@@ -929,7 +923,6 @@ namespace mongo {
 
     protected:
         friend class SyncClusterConnection;
-        virtual bool recv( Message& m );
         virtual void sayPiggyBack( Message &toSend );
 
         DBClientReplicaSet *clientSet;
