client/dbclientcursor.cpp
@@ -72,23 +72,27 @@ namespace mongo {
     void DBClientCursor::initLazy() {
         Message toSend;
         _assembleInit( toSend );
-        _lazy = _client->callLazy( toSend );
-        assert( _lazy );
+        _client->say( toSend );
     }
 
-    bool DBClientCursor::initLazyFinish() {
-        assert( _lazy );
-        if ( ! _lazy->recv( *b.m ) ) {
-            log() << "DBClientCursor::init lazy call() failed" << endl;
+    bool DBClientCursor::initLazyFinish( bool& retry ) {
+
+        bool recvd = _client->recv( *b.m );
+
+        // If we get a bad response, return false
+        if ( ! recvd || b.m->empty() ) {
+
+            if( !recvd )
+                log() << "DBClientCursor::init lazy say() failed" << endl;
+            if( b.m->empty() )
+                log() << "DBClientCursor::init message from say() was empty" << endl;
+
+            _client->checkResponse( NULL, 0, &retry, &_lazyHost );
             return false;
         }
-        if ( b.m->empty() ) {
-            // log msg temp?
-            log() << "DBClientCursor::init message from call() was empty" << endl;
-            return false;
-        }
-        dataReceived();
-        return true;
+
+        dataReceived( retry, _lazyHost );
+        return !retry;
     }
 
     void DBClientCursor::requestMore() {
@@ -136,7 +140,8 @@ namespace mongo {
         dataReceived();
     }
 
-    void DBClientCursor::dataReceived() {
+    void DBClientCursor::dataReceived( bool& retry, string& host ) {
+
         QueryResult *qr = (QueryResult *) b.m->singleData();
         resultFlags = qr->resultFlags();
 
@@ -162,7 +167,7 @@ namespace mongo {
         b.pos = 0;
         b.data = qr->data();
 
-        _client->checkResponse( b.data, b.nReturned ); // watches for "not master"
+        _client->checkResponse( b.data, b.nReturned, &retry, &host ); // watches for "not master"
 
         /* this assert would fire the way we currently work:
             assert( nReturned || cursorId == 0 );
@@ -250,8 +255,8 @@ namespace mongo {
 
         if ( conn->get()->type() == ConnectionString::SET ||
              conn->get()->type() == ConnectionString::SYNC ) {
-            if( _lazy )
-                _scopedHost = _lazy->getServerAddress();
+            if( _lazyHost.size() > 0 )
+                _scopedHost = _lazyHost;
             else if( _client )
                 _scopedHost = _client->getServerAddress();
             else
@@ -263,7 +268,7 @@ namespace mongo {
 
         conn->done();
         _client = 0;
-        _lazy = 0;
+        _lazyHost = "";
     }
 
     DBClientCursor::~DBClientCursor() {
